02 - updated the layout and added characters for each book

--- a/fire-and-ice/src/app/components/books/books/books.component.html
+++ b/fire-and-ice/src/app/components/books/books/books.component.html
@@ -1,47 +1,22 @@
-<div class="container">
+<div class="books">
   <!-- Book LIST -->
-  <div class="col-30">
-    <mat-card>
+  <h1>Books</h1>
+  <div *ngFor="let book of books">
+    <mat-card class="book">
       <mat-card-header>
-        <mat-card-title>
-          <h1>Books</h1>
-        </mat-card-title>
+        <mat-card-title>{{book.name}}</mat-card-title>
+        <!-- TODO: get year from the release date-->
+        <mat-card-subtitle>{{book.authors}} - {{book.released}}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <mat-list>
-          <mat-list-item (click)="selectBook(book)"
-            *ngFor="let book of books">
-            <h3 mat-line>
-              <!-- PROJECT DETAILS -->
-              {{book.name}}
-            </h3>
-            <p mat-line>
-              <!-- PROJECT DETAILS -->
-              {{book.authors}}
-            </p>
-            <p mat-line>
-              {{book.released}}
-            </p>
-            <p mat-line>
-              {{book.isbn}}
-            </p>
-
-            <div class="col-70">
-              <span *ngIf="selectedBook && selectedBook.povCharacters">
-                <span>{{selectedBook.povCharacters}}</span>
-                <mat-list-item *ngFor="let character of selectedBook.povCharacters"> -->
-                  <span>{{character}}</span>
-                  <app-characters>
-                    [url]="character"
-                  </app-characters>
-                </mat-list-item>
-              </span>  
-            </div>
-          </mat-list-item>
-        </mat-list>
+        <!-- <span *ngIf="selectedBook && selectedBook.povCharacters"></span> -->
+        <mat-grid-list cols="5">
+          <mat-grid-tile *ngFor="let character of book.povCharacters">
+            <app-characters [url]="character"></app-characters>
+          </mat-grid-tile>
+        </mat-grid-list>
+        <span>ISBN: {{book.isbn}}</span>
       </mat-card-content>
     </mat-card>
   </div>
-
-  
 </div>
