--- a/fire-and-ice/src/app/components/characters/character-dialog/character-dialog.component.scss
+++ b/fire-and-ice/src/app/components/characters/character-dialog/character-dialog.component.scss
@@ -7,12 +7,20 @@
 
         &-title {
             display: inline-block;
-            flex: 1;
+            flex: 2;
         }
 
         &-value {
             display: inline-block;
-            flex: 3;
+            flex: 5;
         }
     }
 }
+
+// .item {
+//     width: auto;
+//     height: auto;
+//     margin: 10px auto;
+//     border: 1px solid #eaeaea;
+//     padding: 10px;
+//   }
